src/snapshots/rustpie__parser__tests__Arrow.snap
---
source: src/parser.rs
expression: "parse(\"(-> Nat (Pair Nat Nat))\")"
---
Ok(
    [
        Expr(
            Expr {
                kind: TArr(
                    [
                        Expr {
                            kind: TNat,
                        },
                    ],
                    Expr {
                        kind: TPair(
                            Expr {
                                kind: TNat,
                            },
                            Expr {
                                kind: TNat,
                            },
                        ),
                    },
                ),
            },
        ),
    ],
)
