src/snapshots/rustpie__parser__tests__apostrophe_parsing.snap
---
source: src/parser.rs
expression: "parse(\"'\")"
---
Err(
    ParseError {
        msg: " --> 1:1\n  |\n1 | \'\n  | ^---\n  |\n  = expected pie",
    },
)
