src/snapshots/rustpie__parser__tests__atom_parsing.snap
---
source: src/parser.rs
expression: "parse(\"'x\")"
---
Ok(
    [
        Expr(
            Atom(
                "x",
            ),
        ),
    ],
)
