src/snapshots/rustpie__parser__tests__big_nat_literal.snap
---
source: src/parser.rs
expression: "parse(\"1232143434875236458243451231123\")"
---
Ok(
    [
        Expr(
            Expr {
                kind: Nat(
                    BigUint {
                        data: [
                            5057191495630298003,
                            66794629445,
                        ],
                    },
                ),
            },
        ),
    ],
)
