src/snapshots/rustpie__parser__tests__cons_parsing.snap
---
source: src/parser.rs
expression: "parse(\"(cons 'x 'x)\")"
---
Ok(
    [
        Expr(
            Expr {
                kind: Cons(
                    Expr {
                        kind: Atom(
                            "x",
                        ),
                    },
                    Expr {
                        kind: Atom(
                            "x",
                        ),
                    },
                ),
            },
        ),
    ],
)
