src/snapshots/rustpie__parser__tests__multi_nat_literal_parsing.snap
---
source: src/parser.rs
expression: "parse(\"(cons 42 42)\")"
---
Ok(
    [
        Expr(
            Expr {
                kind: Cons(
                    Expr {
                        kind: Nat(
                            BigUint {
                                data: [
                                    42,
                                ],
                            },
                        ),
                    },
                    Expr {
                        kind: Nat(
                            BigUint {
                                data: [
                                    42,
                                ],
                            },
                        ),
                    },
                ),
            },
        ),
    ],
)
