src/snapshots/rustpie__parser__tests__nat_literal_parsing.snap
---
source: src/parser.rs
expression: "parse(\"1\")"
---
Ok(
    [
        Expr(
            Nat(
                1,
            ),
        ),
    ],
)
