src/snapshots/rustpie__parser__tests__postrophe_with_num_parsing.snap
---
source: src/parser.rs
expression: "parse(\"'1\")"
---
Err(
    ParseError {
        msg: " --> 1:1\n  |\n1 | \'1\n  | ^---\n  |\n  = expected pie",
    },
)
