src/snapshots/rustpie__parser__tests__tatom_parsing.snap
---
source: src/parser.rs
expression: "parse(\"Atom\")"
---
Ok(
    [
        Expr(
            TAtom,
        ),
    ],
)
