src/snapshots/rustpie__parser__tests__tpair_parsing.snap
---
source: src/parser.rs
expression: "parse(\"(Pair Atom Atom)\")"
---
Ok(
    [
        Expr(
            TPair(
                TAtom,
                TAtom,
            ),
        ),
    ],
)
