src/snapshots/rustpie__parser__tests__var_parsing.snap
---
source: src/parser.rs
expression: "parse(\"x\")"
---
Ok(
    [
        Expr(
            Var(
                "x",
            ),
        ),
    ],
)
