src/snapshots/rustpie__parser__tests__λ.snap
---
source: src/parser.rs
expression: "parse(\"(λ (x) (cons x 42))\")"
---
Ok(
    [
        Expr(
            Expr {
                kind: Lambda(
                    [
                        "x",
                    ],
                    Expr {
                        kind: Cons(
                            Expr {
                                kind: Var(
                                    "x",
                                ),
                            },
                            Expr {
                                kind: Nat(
                                    BigUint {
                                        data: [
                                            42,
                                        ],
                                    },
                                ),
                            },
                        ),
                    },
                ),
            },
        ),
    ],
)
